--- a/antenne/introduzione.tex
+++ b/antenne/introduzione.tex
@@ -224,7 +224,7 @@ Elenchiamo ora le \emph{proprietà del mezzo} che andremo a studiare, consideran
 D'ora in poi considereremo \emph{solo mezzi dielettrici}, mezzi per cui $\mu \simeq \mu_0$, in cui quindi le equazioni di Maxwell saranno analoghe a quelle del vuoto, a meno delle costanti $\epsilon, \mu_0$ e $\sigma$.
 
 \section{Studio delle equazioni di Maxwell in regime sinusoidale}
-\sectionname{Equazioni di Maxwell in regime sinusoidale}
+\sectionmark{Equazioni di Maxwell in regime sinusoidale}
 Studieremo ora le proprietà del campo elettromagnetico nel caso in cui l'onda sia di tipo sinusoidale:
 introdurremo i vettori di \emph{Steinmetz} e vedremo come un mezzo possa variare la sua
 attitudine al campo alle diverse frequenze.
