Sistemato il merge che non era andato completamente a buon fine

--- a/antenne/introduzione.tex
+++ b/antenne/introduzione.tex
@@ -126,7 +126,6 @@ E dunque,
 		\diverg \d = \rho & \text{si riconosce come la legge di Gauss}
 	\end{cases}
 \end{esp}
-\rho^2 + 2 \rho \cos(2 \beta_1 x_1)) \\
 \subsubsection{Leggi del legame materiale}
 La risoluzione delle equazioni di Maxwell porta ad aver 6 equazioni, derivanti dalle prime due equazioni (vettoriali) di Maxwell in 15 incognite ($\b , \e , \h , \d , \jt $ tutte $\in \R^3$).
 
@@ -279,7 +278,7 @@ si può ricavare che
 
 \subsection{Equazioni di Maxwell in regime sinusoidale}
 Le equazioni di Maxwell, nel caso del regime sinusoidale si possono riscrivere come
-\begin{equation}\begin{dcases}
+\begin{equation}\begin{cases}
 	\rot\E(\r) = -\jmath \omega \mu\H(\r) \\
 	\begin{aligned}[b]
 		\rot\H(\r) &= \jmath	\omega \epsilon \E(\r) + \J(\r) + \sigma\E \\
