--- a/antenne/filiformi.tex
+++ b/antenne/filiformi.tex
@@ -174,7 +174,7 @@ Possiamo inoltre ricavare le espressioni della potenza irradiata e della resiste
 P = \frac{\pi}{3} \eta \left | I_A \right |^2 \left(\frac{L}{2 \lambda}\right)^2 = \frac{\pi}{12} \eta \left | I_A \right |^2 \left(\frac{L}{\lambda}\right)^2
 \end{equation*}
 \begin{equation*}
-R_r = \frac{2}{3} \frac{\pi}{4} \eta \left(\frac{L}{2 \lambda}\right)^2 = \frac{\pi}{6} \eta \left(\frac{L}{2 \lambda}\right)^2 = \frac{\pi}{6} 120 \pi	 \left(\frac{L}{2 \lambda}\right)^2 = 20 (\pi)^2 \left(\frac{L}{2 \lambda}\right)^2
+R_r = \frac{2}{3} \frac{\pi}{4} \eta \left(\frac{L}{2 \lambda}\right)^2 = \frac{\pi}{6} \eta \left(\frac{L}{\lambda}\right)^2 = \frac{\pi}{6} 120 \pi	 \left(\frac{L}{\lambda}\right)^2 = 20 (\pi)^2 \left(\frac{L}{ \lambda}\right)^2
 \end{equation*}
 
 Trattandosi di un oggetto filiforme, è possibile definire la \emph{resistenza per unità di lunghezza}.
