--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -187,11 +187,12 @@
 \begin{titlepage}
 	\begin{center}
 		\hspace{0.5cm}
-		\Large{Antenne e propagazione wireless} \\
+		\Huge{\textsc{Antenne e propagazione wireless}} \\
 		\vspace{1cm}
-		%\includegraphics[width=9cm]{Zorzilla}\\
+    \centering
+		\includegraphics[width=\textwidth]{copertina.png}\\
 		\vspace{0.5cm}
-		\emph{written with love by} \\
+		\emph{scritto da} \\
 		\vspace{0.5cm}
 		{\Large Andrea Pittaro, Enrico Lovisotto, Umberto Martinelli}
 	\end{center}
