--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -187,12 +187,14 @@
 \begin{titlepage}
 	\begin{center}
 		\hspace{0.5cm}
-		\Huge{\textsc{Antenne e propagazione wireless}} \\
+		\fontsize{30}{30}{\textsc{Antenne e propagazione}} \\
+    \vspace{0.2cm}
+    \fontsize{30}{30}{\textsc{wireless}} \\
 		\vspace{1cm}
     \centering
 		\includegraphics[width=\textwidth]{copertina.png}\\
 		\vspace{0.5cm}
-		\emph{scritto da} \\
+		\large{\emph{scritto da}} \\
 		\vspace{0.5cm}
 		{\Large Andrea Pittaro, Enrico Lovisotto, Umberto Martinelli}
 	\end{center}
