sistemati grafici e typos. Inserita introduzione

--- a/antenne/antenne_cap.tex
+++ b/antenne/antenne_cap.tex
@@ -168,6 +168,7 @@ Procediamo ora con un'ipotesi di soluzione: supponiamo che il potenziale vettore
 
 Sostituendo l'espressione in \autoref{eq:helmotz_vuoto}, si ottiene perciò
 \begin{esp*}
+	\hspace{-2cm}
 	\nabla^2 A_z
 	& = \frac{1}{r^2} \deriv{}{r}\left(r^2 \deriv{A_z(r)}{r}\right) =0\\
 	\implies \nabla^2 A_z + \omega^2\, \mu\, \epsilon A_z & = \frac{1}{r^2} \deriv{}{r}\left(r^2 \deriv{\frac{f(r)}{r}}{r}\right) + \omega^2 \mu\epsilon\frac{f(r)}{r} \\
@@ -387,14 +388,14 @@ Nel caso del dipolo elementare i suoi solidi di direttività in campo e in poten
     \centering
     \begin{subfigure}[b]{0.5\textwidth}
         \centering
-        \includegraphics[width=5cm]{solidoDE.jpg}
+        \includegraphics[width=5cm]{solido-dirett.png}
         \caption{Solido di direttività}
 				\label{fig:solidoDE}
     \end{subfigure}%
     ~
     \begin{subfigure}[b]{0.5\textwidth}
         \centering
-        \includegraphics[width=5cm]{img/patternDE.png}
+        \includegraphics[width=5cm]{img/pattern.png}
         \caption{Diagramma di radiazione}
 				\label{fig:patternDE}
     \end{subfigure}
