--- a/antenne/introduzione.tex
+++ b/antenne/introduzione.tex
@@ -4,9 +4,9 @@ Nel corso verranno utilizzate due sistemi di coordinate, \emph{cartesiano} e \em
 
 Le due rappresentazioni di un medesimo punto $P$, definito del vettore posizione $\r$, saranno le seguenti.
 \begin{esp}
-	P&=(x,y,z) = \r = x \cdot \hat{x} + y \cdot \hat{y} +z \cdot \hat{z}
+	P&=(x,y,z) = \r = x \, \hat{x} + y \, \hat{y} +z \, \hat{z}
 	& \text{ con\quad} x\perp y \perp z \perp x \\
-	P&=(r,\theta,\phi) = r \cdot \hat{r} = r \cdot \hat{r}(\theta,\phi)
+	P&=(r,\theta,\phi) = r \, \hat{r} = r \, \hat{r}(\theta,\phi)
 		& \text{ con\quad} r \perp \theta \perp \phi \perp r
 	\label{eq:riferimento}
 \end{esp}
