--- a/antenne/onde_piane.tex
+++ b/antenne/onde_piane.tex
@@ -284,7 +284,8 @@ Le onde piane sono particolari soluzioni delle equazioni di Maxwell che hanno pr
 
 	L'analisi dimensionale mette in luce come le quantità dell'equazione ricavata siano potenze per unità di volume: integrando sul volume $V$ considerato si ottengono perciò potenze, qui scomposte a seconda dell'origine dei vari termini.
 
-	\begin{esp} \label{eq:bilancio_potenza_EM}
+	\begin{esp} \hspace*{-1cm}
+		 \label{eq:bilancio_potenza_EM}
 		& \underbrace{ - \int_V \e \cdot \jt dV}_{\text{potenza dai generatori}}
 			= \underbrace{\int_V \sigma |\e|^2 dV}_{\text{effetto Joule}}
 			+ \underbrace{\int_V \left[ \epsilon \deriv{|\e|^2}{t} + \mu \deriv{|\h|^2}{t} \right] dV}
