--- a/antenne/polarizzazione.tex
+++ b/antenne/polarizzazione.tex
@@ -1,5 +1,5 @@
 \chapter{Polarizzazione del campo elettromagnetico}
-\chaptername{Polarizzazione del campo EM}
+\chaptermark{Polarizzazione del campo EM}
 Andremo ora ad analizzare come si comporta il campo elettromagnetico nello spazio, in particolare la sua evoluzione e i casi degeneri.
 
 Iniziamo con un'analisi nel dominio del tempo del campo, prestando attenzione alla differenza con il corso di Fisica 2: mentre nell'altro corso si è osservata la polarizzazione del mezzo, ora analizzeremo la polarizzazione dell'onda elettromagnetica.
